# tuoyu_sensorteaching

./: README.en.md  README.md
common/autoware_config_msgs/: CMakeLists.txt
common/autoware_config_msgs/msg/: ConfigCameraDetection.msg  ConfigCanny.msg  ConfigClustering.msg  ConfigHough.msg  ConfigROI.msg  ConfigRayGroundFilter.msg
driver/: README.md  topic_transmit.py
driver/rslidar_sdk/config/: config.yaml
driver/rslidar_sdk/launch/: start.launch
function_achivement/camera_detection/: CMakeLists.txt  README.md  package.xml
function_achivement/camera_detection/src/: camera_node.cpp  canny_node.cpp  hough_node.cpp  roi_node.cpp
function_achivement/camera_detection/src/yolov4-tiny-pytorch-master/: detect_node.py  yolo.py
function_achivement/lidar_detection/: README.md
function_achivement/lidar_detection/lidar_euclidean_cluster_detect/: CMakeLists.txt  package.xml
function_achivement/lidar_detection/lidar_euclidean_cluster_detect/launch/: lidar_euclidean_cluster_detect.launch  lidar_euclidean_cluster_detect_param.launch
function_achivement/lidar_detection/lidar_euclidean_cluster_detect/nodes/lidar_euclidean_cluster_detect/: lidar_euclidean_cluster_detect.cpp
function_achivement/lidar_detection/points_downsampler/: CMakeLists.txt
function_achivement/lidar_detection/points_preprocessor/: CMakeLists.txt
function_achivement/lidar_detection/points_preprocessor/include/points_preprocessor/ray_ground_filter/: ray_ground_filter.h
function_achivement/lidar_detection/points_preprocessor/launch/: ray_ground_filter.launch
function_achivement/lidar_detection/points_preprocessor/nodes/ray_ground_filter/: ray_ground_filter.cpp
process_monitor/: CMakeLists.txt  package.xml
process_monitor/launch/: run.launch  rviz.launch
process_monitor/rviz/: tuoyu.rviz
process_monitor/src/: process_monitor.cpp
